<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.list.ListFragment">

    <data>

        <variable
            name="clickCallback"
            type="cz.ackee.cookbook.screens.add.AddFragmentCallback" />

        <variable
            name="viewModel"
            type="cz.ackee.cookbook.screens.add.AddViewModel" />

        <variable
            name="resource"
            type="cz.ackee.cookbook.vo.api.Resource" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_list"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorWhite"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/add_title"
                app:titleMarginStart="@dimen/screen_margin"
                app:titleTextAppearance="@style/ToolbarTextStyle" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_list">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/screen_margin">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/screen_margin"
                    android:layout_marginTop="@dimen/screen_margin"
                    android:layout_marginEnd="@dimen/screen_margin"
                    android:hint="@string/add_name_hint"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:text="@={viewModel.name}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/screen_margin"
                    android:layout_marginTop="@dimen/screen_margin"
                    android:layout_marginEnd="@dimen/screen_margin"
                    android:hint="@string/add_intro_hint"
                    app:layout_constraintTop_toBottomOf="@id/text_input_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_intro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:text="@={viewModel.info}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txt_ingredience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/screen_margin"
                    android:layout_marginTop="@dimen/screen_margin"
                    android:layout_marginEnd="@dimen/screen_margin"
                    android:fontFamily="@font/roboto_bold"
                    android:letterSpacing="0.1"
                    android:text="@string/add_ingredients_title"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_intro" />

                <LinearLayout
                    android:id="@+id/ingredients_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/screen_margin"
                    android:layout_marginEnd="@dimen/screen_margin"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/txt_ingredience" />

                <Button
                    android:id="@+id/btn_add_ingredient"
                    style="@style/AddButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/screen_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/button_background"
                    android:drawableStart="@drawable/ic_add_small"
                    android:onClick="@{() -> clickCallback.onAddIngredientClick()}"
                    android:text="@string/action_add"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ingredients_wrapper" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_process"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/screen_margin"
                    android:layout_marginTop="@dimen/screen_margin"
                    android:layout_marginEnd="@dimen/screen_margin"
                    android:hint="@string/add_process_hint"
                    app:layout_constraintTop_toBottomOf="@id/btn_add_ingredient">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_process"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:text="@={viewModel.description}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_time"
                    android:layout_width="@dimen/add_screen_time_input_length"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/screen_margin"
                    android:layout_marginTop="@dimen/screen_margin"
                    android:layout_marginEnd="@dimen/screen_margin"
                    android:hint="@string/add_time_hint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_input_process">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="3"
                        android:text="@={viewModel.duration}" />
                </com.google.android.material.textfield.TextInputLayout>

                <include
                    layout="@layout/view_loading_state"
                    android:layout_width="@dimen/loading_state_size"
                    android:layout_height="@dimen/loading_state_size"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:resource="@{resource}" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>